assets/css/app.css
body {
  margin: 0;
}

html {
  font-family: "open-sans";
}

input[type=text] {
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  box-sizing: border-box;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  outline: none;
  border-radius: 3px;
}

input[type=text]:focus {
    border: 3px solid #555;
}

button[type=submit] {
  padding: 8px 24px;
  margin: 4px 2px;
  cursor: pointer;
  border-radius: 4px;
  float: right;
}

button[type=button] {
  height: 100%;
  width: 10%;
  margin: 0;
  padding: 0;
  border: 0;
}

#old {
  border: 1px solid black;
  margin: 0 auto;
}

#board {
  width: 60vh;
  height: 60vh;
  margin: 0 auto;
}

#clue-box {
  width: 60%;
  height: 4vh;
  text-align: center;
  font-size: 2.5vh;
  margin: 0px auto;
  padding-bottom: 1vh;
}

#clue {
  position: absolute;
  top: 60%;
  left: 25%;
  height: 4vh;
  width: 50%;
}

#keyboard {
  width: 100%;
  height: 34vh;
}

.file-in {
	width: 0.1px;
	height: 0.1px;
	opacity: 0;
	overflow: hidden;
	position: absolute;
	z-index: -1;
}

.file-in + label {
  display: inline-block;
  width: 100%;
  box-sizing: border-box;
  margin: 0 auto;
  padding: 12px 20px;
  border: 3px solid grey;
  border-style: groove;
  border-radius: 3px;
  text-align: center;
}

.file-in:focus + label, .file-in + label:hover {
  color: red;
}

.file-in + label {
	cursor: pointer; /* "hand" cursor */
}

.file-in:focus + label {
	outline: 1px dotted #000;
	outline: -webkit-focus-ring-color auto 5px;
}

.filled {
  position: relative;
  width: calc(((100%+15px) / 15) - 2px);
  height: calc(((100%+15px) / 15) - 2px);
  background: black;
  border: 1px solid black;
  padding: 0;
  margin: 0;
  float: left;
}

.empty {
  position: relative;
  width: calc(((100%+15px) / 15) - 2px);
  height: calc(((100%+15px) / 15) - 2px);
  border: 1px solid black;
  float: left;
}

.contents {
  float: left;
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 5.0vh;
  font-size: 3.2vh;
  font-weight: 200;
}

.label {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 0px;
  height: 0px;
  border: 0px solid black;
  padding: 0;
  margin: 0;
  font-size: 1.3vh;
  color: black;
}

.selected {
  background-color: yellow;
}

.selected-clue {
  background-color: aqua;
}

.unchecked {
  color: black;
}

.correct {
  color: blue;
}

.incorrect {
  color: red;
}

.osk {
    width: 100%;
}
.osk-row {
  text-align: center;
  margin-bottom: 4px;
}
.osk-key {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  display: inline-block;
  width: 8vmin;
  height: 8vmin;
  background: #323231;
  color: #A5C0CA;
  border-radius: 5px;
  text-align: center;
  text-decoration: none;
  font: 15px;
  font-weight: 700;
  padding-top: 13px;
}
.osk-key + .osk-key {
  margin-left: 1vmin;
}
.osk-key.space {
  width: 62vmin;
}

